# space-agency

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml  req.pip
test_task/slider/: admin.py  apps.py  models.py  urls.py  views.py
test_task/slider/migrations/: 0001_initial.py
test_task/slider/static/css/: style.css  style_2.css
test_task/slider/templates/: index copy.html  index.html  index_2.html
test_task/static/css/: style.css
test_task/test_task/: settings.py  urls.py
