[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["Eduard Komarov <rango.adik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
django = "4.1"
pymysql = "^1.1.1"
cryptography = "^43.0.3"
django-filer = "^3.3.0"
django-admin-sortable2 = "<2.2.4"
easy-thumbnails = "2.9.0"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
